package edu.hitsz.observer;

public interface FlyingObjectObserver {
    public abstract void update();
}
